--- a/swiper/index.html
+++ b/swiper/index.html
@@ -10,6 +10,7 @@
 	<script src = "Boot.js"></script>
 	<script src = "Preloader.js"></script>
 	<script src = "StartMenu.js"></script>
+	<script src ="Game.js"></script>
 	<style>
 	body{
 		padding 0;
@@ -26,7 +27,7 @@
             game.state.add('Boot', Boot);
             game.state.add('Preloader', Preloader);
             game.state.add('StartMenu', StartMenu);
-           // game.state.add('Game', Game);
+            game.state.add('Game', Game);
             game.state.start('Boot');
         })();
     </script>
