--- a/swiper/index.html
+++ b/swiper/index.html
@@ -10,15 +10,8 @@
 	<script src = "Boot.js"></script>
 	<script src = "Preloader.js"></script>
 	<script src = "StartMenu.js"></script>
-
 	<script src ="Game.js"></script>
-	<style>
-	body{
-		padding 0;
-		margin 0;
-		background-color: #000000;
-	}
-	</style>
+	<link rel="stylesheet" type="css" href="bitnami.css">
 	</head>
 	
 	<div id="gameContainer"></div>
