--- a/swiper/index.html
+++ b/swiper/index.html
@@ -21,7 +21,7 @@
         game.state.add('Boot', Boot);
         game.state.add('Preloader', Preloader);
         game.state.add('StartMenu', StartMenu);
-        // game.state.add('Game', Game);
+        game.state.add('Game', Game);
         game.state.start('Boot');
     })();
 </script>
