--- a/swiper/index.html
+++ b/swiper/index.html
@@ -11,9 +11,10 @@
 	<script src = "Preloader.js"></script>
 	<script src = "StartMenu.js"></script>
 	<script src ="Game.js"></script>
-	<link rel="stylesheet" type="css" href="bitnami.css">
+	<link rel="stylesheet" href="bitnami.css">
 
 </head>
+<body>
 <div id="gameContainer"></div>
 <script>
     (function(){
@@ -25,6 +26,6 @@
         game.state.start('Boot');
     })();
 </script>
-<body>
+
 </body>
 </html>
