--- a/swiper/index.html
+++ b/swiper/index.html
@@ -11,7 +11,7 @@
 	<script src = "Preloader.js"></script>
 	<script src = "StartMenu.js"></script>
 	<script src ="Game.js"></script>
-	<link rel="stylesheet" href="bitnami.css">
+	<link rel="stylesheet" href="style.css">
 
 </head>
 <body>
