--- a/swiper/index.html
+++ b/swiper/index.html
@@ -12,6 +12,7 @@
 	<script src = "StartMenu.js"></script>
 	<script src = "Game.js"></script>
 	<script src = "HighscoreMenu.js"></script>
+	<script src = "Settings.js"></script>
 	<link rel="stylesheet" href="style.css">
 
 </head>
@@ -25,6 +26,7 @@
         game.state.add('StartMenu', StartMenu);
         game.state.add('Game', Game);
         game.state.add('HighscoreMenu', HighscoreMenu);
+        game.state.add('Settings', Settings);
         game.state.start('Boot');
     })();
 </script>
