mute sound och music

--- a/swiper/index.html
+++ b/swiper/index.html
@@ -6,6 +6,10 @@
     <meta name = "viewport" content = "width = device-width">
 	<title>Swiper game</title>
 	<link rel = "icon" href = "assets/images/iconV2.png">
+	<script>var music;</script>
+	<script>var muteMusicbool = false;</script>
+	<script>var muteSoundbool = false;</script>
+	<script>var startMusic = true;</script>
 	<script src = "libs/phaser.min.js"></script>
 	<script src = "libs/phaser.js"></script>
 	<script src = "Boot.js"></script>
