Highscore-funktion 5 st

--- a/swiper/index.html
+++ b/swiper/index.html
@@ -10,6 +10,11 @@
 	<script>var muteMusicbool = false;</script>
 	<script>var muteSoundbool = false;</script>
 	<script>var startMusic = true;</script>
+	<script>var highscore;</script>
+	<script>var highscore2;</script>
+	<script>var highscore3;</script>
+	<script>var highscore4;</script>
+	<script>var highscore5;</script>
 	<script src = "libs/phaser.min.js"></script>
 	<script src = "libs/phaser.js"></script>
 	<script src = "Boot.js"></script>
