--- a/swiper/index.html
+++ b/swiper/index.html
@@ -6,10 +6,12 @@
     <meta name = "viewport" content = "width = device-width">
 	<title>Swiper game</title>
 	<link rel = "icon" href = "assets/images/iconV2.png">
-	<script>var music;</script>
 	<script>var muteMusicbool = false;</script>
 	<script>var muteSoundbool = false;</script>
 	<script>var startMusic = true;</script>
+	<script>var music;</script>
+	<script>var musicStart;</script>
+	<script>var musicStart2;</script>
 	<script>var highscore;</script>
 	<script>var highscore2;</script>
 	<script>var highscore3;</script>
