--- a/swiper/index.html
+++ b/swiper/index.html
@@ -31,8 +31,7 @@
 <body>
 	<div id = "gameContainer"></div>
 	<script>
-    	(function(){
-        	var game = new Phaser.Game(540, 960, Phaser.AUTO, 'gameContainer');
+        	var game = new Phaser.Game("100%", "100%", Phaser.AUTO, 'gameContainer');
         	game.state.add('Boot', Boot);
         	game.state.add('Preloader', Preloader);
         	game.state.add('StartMenu', StartMenu);
@@ -41,7 +40,6 @@
         	game.state.add('Settings', Settings);
         	game.state.add('GameOver', GameOver);
         	game.state.start('Boot');
-    	})();
 	</script>
 </body>
 </html>
