--- a/swiper/index.html
+++ b/swiper/index.html
@@ -25,6 +25,7 @@
 	<script src = "Game.js"></script>
 	<script src = "HighscoreMenu.js"></script>
 	<script src = "Settings.js"></script>
+	<script src = "Credits.js"></script>
 	<script src = "GameOver.js"></script>
 	<link rel = "stylesheet" href = "style.css">
 </head>
@@ -38,6 +39,7 @@
         	game.state.add('Game', Game);
         	game.state.add('HighscoreMenu', HighscoreMenu);
         	game.state.add('Settings', Settings);
+        	game.state.add('Credits', Credits);
         	game.state.add('GameOver', GameOver);
         	game.state.start('Boot');
 	</script>
