Rensat, Ljud och buggfix
Rensat i assets och preloader. Lagt till ett awsome ljud vid knapptryck.
Fixat highscore buggen. Musiken i menyn spelas inte längre i bakgrunden
mutad men mute osv funkar ändå.

--- a/swiper/index.html
+++ b/swiper/index.html
@@ -16,6 +16,7 @@
 	<script>var highscore3;</script>
 	<script>var highscore4;</script>
 	<script>var highscore5;</script>
+	<script>var audio;</script>
 	<script src = "libs/phaser.min.js"></script>
 	<script src = "libs/phaser.js"></script>
 	<script src = "Boot.js"></script>
