--- a/swiper/index.html
+++ b/swiper/index.html
@@ -30,7 +30,7 @@
 	<link rel = "stylesheet" href = "style.css">
 </head>
 <body>
-	<div id = "gameContainer"></div>
+	<div name = "gameContainer"></div>
 	<script>
         	var game = new Phaser.Game("100%", "100%", Phaser.AUTO, 'gameContainer');
         	game.state.add('Boot', Boot);
